examples/test/testpolicy2207.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2207
  namespace: namespace258
spec:
  podSelector:
    matchLabels:
      key9: value5
      key7: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value38
          key15: value27
      podSelector:
        matchLabels:
          key9: value39
          key41: value48
